# MovingAverage

./: .clang-format  .gitignore  CMakeLists.txt  README.md  speed.xlsx
src/: main.cpp  move_average.hpp  move_average_interface.hpp
